[gd_scene load_steps=4 format=3 uid="uid://b71tjsbg3f1e4"]

[ext_resource type="Script" path="res://scenes/abcs/physical_projectile.gd" id="1_xfppo"]
[ext_resource type="Script" path="res://scripts/functionals/hitbox.gd" id="2_f88a1"]
[ext_resource type="Script" path="res://scripts/functionals/movement.gd" id="3_soigt"]

[node name="PhysicalProjectile" type="Node2D"]
script = ExtResource("1_xfppo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="RigidBody2D" type="RigidBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]

[node name="HitboxComponent" type="Area2D" parent="."]
script = ExtResource("2_f88a1")

[node name="MovementComponent" type="Node" parent="." node_paths=PackedStringArray("rigid_body_2d", "root")]
script = ExtResource("3_soigt")
rigid_body_2d = NodePath("../RigidBody2D")
root = NodePath("..")
